test/objects/Secteur__c/Secteur__c.object-meta.xml
<CustomObject>
    <label>Secteur</label>
    <nameField>
        <label>Secteur Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Secteurs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>