test/objects/Secteur__c/fields/Composant__c.field-meta.xml
<CustomField>
    <fullName>Composant__c</fullName>
    <label>Composant</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Composant 1</fullName>
            </value>
            <value>
                <fullName>Composant 2</fullName>
            </value>
            <value>
                <fullName>Composant 3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>