test/objects/Secteur__c/fields/Designation__c.field-meta.xml
<CustomField>
    <fullName>Designation__c</fullName>
    <label>Designation</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>