test/objects/Secteur__c/fields/Groupement__c.field-meta.xml
<CustomField>
    <fullName>Groupement__c</fullName>
    <label>Groupement</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Groupement 1</fullName>
            </value>
            <value>
                <fullName>Groupement 2</fullName>
            </value>
            <value>
                <fullName>Groupement 3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>