test/objects/Secteur__c/fields/Nature_de_biens_et_ou_valeur__c.field-meta.xml
<CustomField>
    <fullName>Nature_de_biens_et_ou_valeur__c</fullName>
    <label>Nature de biens et/ou valeur</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>