test/objects/Secteur__c/fields/Nombre_d_acc_s_probables_retenus__c.field-meta.xml
<CustomField>
    <fullName>Nombre_d_acc_s_probables_retenus__c</fullName>
    <label>Nombre d&apos;accès probables retenus</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>