test/objects/Secteur__c/fields/Secteur_Parent__c.field-meta.xml
<CustomField>
    <fullName>Secteur_Parent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Secteur Parent</label>
    <referenceTo>Secteur__c</referenceTo>
    <relationshipLabel>Secteurs</relationshipLabel>
    <relationshipName>Secteurs</relationshipName>
    <type>Lookup</type>
</CustomField>