test/objects/Secteur__c/fields/Site__c.field-meta.xml
<CustomField>
    <fullName>Site__c</fullName>
    <label>Site</label>
    <referenceTo>Site__c</referenceTo>
    <relationshipLabel>Secteurs</relationshipLabel>
    <relationshipName>Secteurs</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>