test/objects/Secteur__c/fields/Surface__c.field-meta.xml
<CustomField>
    <fullName>Surface__c</fullName>
    <label>Surface</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>